[package]
name = "maratus"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web   = "4"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
mongodb     = { version = "3.2.3" }
bson        = "2.0"
uuid        = { version = "1.1", features = ["serde", "v4"] }
chrono      = { version = "0.4", features = ["serde"] }
tokio       = { version = "1", features = ["macros", "rt-multi-thread"] }
futures     = "0.3"